--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,20 +17,21 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1>
+        <!-- <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1> -->
 
         <img src="{{site.logo | relative_url}}" alt="Logo" />
 
-        <!-- <p>{{ site.description | default: site.github.project_tagline }}</p> -->
+        <h3>Ryan Bowering</h3>
 
-
-        <p class="view"><i class="fas fa-map-marker-alt"></i> Skokie, IL</p>
-        <p class="view"><a href="mailto:rnbowering@gmail.com"><i class="fas fa-envelope"></i> Email</a></p>
-        <p class="view"><a href="https://www.linkedin.com/in/rnbowering/"><i class="fab fa-linkedin"></i> LinkedIn</a></p>
-        <p class="view"><a href="https://github.com/bowerirn"><i class="fab fa-github"></i> GitHub</a></p>
+        <p class="view">
+          <i class="fas fa-map-marker-alt"></i> Skokie, IL
+          <a href="mailto:rnbowering@gmail.com"><i class="fas fa-envelope"></i> Email</a>
+          <a href="https://www.linkedin.com/in/rnbowering/"><i class="fab fa-linkedin"></i> LinkedIn</a>
+          <a href="https://github.com/bowerirn"><i class="fab fa-github"></i> GitHub</a>
+        </p>
 
         <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
+          <li><a href="/assets/files/Ryan Bowering Resume.pdf">Download <strong>Resume</strong></a></li>
         </ul>
       </header>
       <section>
