--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: default
 ---
 
@@ -11,4 +11,4 @@ layout: default
 
 {% if page.tags %}
   <small>tags: <em>{{ page.tags | join: "</em> - <em>" }}</em></small>
-{% endif %}
+{% endif %} -->
