made links open new tabs

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,9 +25,12 @@
 
         <p class="view">
           <i class="fas fa-map-marker-alt"></i> Skokie, IL
-          <a href="mailto:rnbowering@gmail.com"><i class="fas fa-envelope"></i> Email</a>
-          <a href="https://www.linkedin.com/in/rnbowering/"><i class="fab fa-linkedin"></i> LinkedIn</a>
-          <a href="https://github.com/bowerirn"><i class="fab fa-github"></i> GitHub</a>
+          <br/>
+          <a href="mailto:rnbowering@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>
+          <br/>
+          <a href="https://www.linkedin.com/in/rnbowering/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
+          <br/>
+          <a href="https://github.com/bowerirn" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
 
         <ul class="downloads">
