removed download ul

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,9 +34,7 @@
           <a href="https://github.com/bowerirn" target="_blank"><i class="fab fa-github"></i> GitHub</a>
         </p>
 
-        <ul class="downloads">
-          <li><a href="/assets/files/Ryan Bowering Resume.pdf">Download <strong>Resume</strong></a></li>
-        </ul>
+        <a class="downloads" href="/assets/files/Ryan Bowering Resume.pdf" target="_blank">Download Resume</a>
       </header>
       <section>
 
