--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -299,7 +299,7 @@ footer {
 
 /* Specific icon colors */
 .view .fa-map-marker-alt {
-  color: red; /* Adjust as needed */
+  color: black; /* Adjust as needed */
 }
 
 .view .fa-envelope {
@@ -315,12 +315,6 @@ footer {
 }
 
 /* Downloads section styling */
-.downloads li {
-  list-style: none;
-  text-align: center;
-  margin: 10px 0;
-}
-
 .downloads a {
   display: inline-block;
   padding: 10px 20px;
