changed image size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,19 +20,16 @@
       <header>
         <!-- <h1><a href="{{ "/" | absolute_url }}">{{ site.title | default: site.github.repository_name }}</a></h1> -->
 
-        <img src="{{site.logo | relative_url}}" alt="Logo" />
+        <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-image"/>
 
-        <h3>Ryan Bowering</h3>
+        <h2>Ryan Bowering</h2>
+        <p>Post-Bac @ LANL</p>
+        <br/>
 
-        <p class="view">
-          <i class="fas fa-map-marker-alt"></i> Skokie, IL
-          <br/>
-          <a href="mailto:rnbowering@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>
-          <br/>
-          <a href="https://www.linkedin.com/in/rnbowering/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a>
-          <br/>
-          <a href="https://github.com/bowerirn" target="_blank"><i class="fab fa-github"></i> GitHub</a>
-        </p>
+        <p class="view"><i class="fas fa-map-marker-alt"></i> Skokie, IL</p>
+        <p class="view"><a href="mailto:rnbowering@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a></p>
+        <p class="view"><a href="https://www.linkedin.com/in/rnbowering/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></p>
+        <p class="view"><a href="https://github.com/bowerirn" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
 
         <a class="downloads" href="/assets/files/Ryan Bowering Resume.pdf" target="_blank">Download Resume</a>
       </header>
