--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,7 +26,7 @@
         <p>Post-Bac @ LANL</p>
         <br/>
 
-        <p class="view"><i class="fas fa-map-marker-alt"></i> Skokie, IL</p>
+        <p class="view link-text"><i class="fas fa-map-marker-alt"></i> Skokie, IL</p>
         <p class="view"><a href="mailto:rnbowering@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a></p>
         <p class="view"><a href="https://www.linkedin.com/in/rnbowering/" target="_blank"><i class="fab fa-linkedin"></i> LinkedIn</a></p>
         <p class="view"><a href="https://github.com/bowerirn" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
