--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -11,11 +11,11 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   color:#222;
-  margin:0 0 20px;
+  margin:0 0 10px;
 }
 
 p, ul, ol, table, pre, dl {
-  margin:0 0 20px;
+  margin:0 0 10px;
 }
 
 h1, h2, h3 {
@@ -286,7 +286,9 @@ footer {
 }
 
 
-
+.link-text {
+  color: black;
+}
 
 .view a {
   color: black;
@@ -317,7 +319,7 @@ footer {
 .downloads {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #666; /* Grayscale color */
+  background-color: #777; /* Grayscale color */
   color: white;
   text-decoration: none;
   border-radius: 8px; /* Rounded corners */
@@ -327,12 +329,13 @@ footer {
 }
 
 .downloads:hover {
-  background-color: #444; /* Darker grayscale on hover */
+  background-color: #555; /* Darker grayscale on hover */
+  color: white
 }
 
 .profile-image {
-  transform: scale(0.5); /* Scales the image to 50% of its original size */
+  transform: scale(0.8); /* Scales the image to 50% of its original size */
   display: block; /* Ensures proper spacing and alignment */
-  margin: 0 auto 20px; /* Centers the image horizontally and adds space below */
+  margin: auto; /* Centers the image horizontally and adds space below */
 }
 
