--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,43 +1,48 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ryan Bowering</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Ryan Bowering</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
 
-{% seo %}
-    <link rel="stylesheet" href="/assets/css/style.scss">
-    {% include head-custom.html %}
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <img src="/assets/img/logo.png" alt="Logo" class="profile-image"/>
+  {% seo %}
+  <link rel="stylesheet" href="{{ " /assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
+  {% include head-custom.html %}
+</head>
 
-        <h2>Ryan Bowering</h2>
-        <p>Post-Bac @ LANL</p>
+<body>
+  <div class="wrapper">
+    <header>
+      <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-image"/>
 
-        <br/>
+      <h2>Ryan Bowering</h2>
+      <p>Post-Bac @ LANL</p>
 
-        <p class="view link-text"><i class="fas fa-map-marker-alt"></i>  Skokie, IL</p>
-        <p class="view"><a href="mailto:rnbowering@gmail.com" target="_blank"><i class="fas fa-envelope"></i>  Email</a></p>
-        <p class="view"><a href="https://www.linkedin.com/in/rnbowering/" target="_blank"><i class="fab fa-linkedin"></i>  LinkedIn</a></p>
-        <p class="view"><a href="https://github.com/bowerirn" target="_blank"><i class="fab fa-github"></i>  GitHub</a></p>  
+      <br />
 
-        <br/>
+      <p class="view link-text"><i class="fas fa-map-marker-alt"></i> Skokie, IL</p>
+      <p class="view"><a href="mailto:rnbowering@gmail.com" target="_blank"><i class="fas fa-envelope"></i> Email</a>
+      </p>
+      <p class="view"><a href="https://www.linkedin.com/in/rnbowering/" target="_blank"><i class="fab fa-linkedin"></i>
+          LinkedIn</a></p>
+      <p class="view"><a href="https://github.com/bowerirn" target="_blank"><i class="fab fa-github"></i> GitHub</a></p>
 
-        <a class="downloads" href="/assets/files/Ryan Bowering Resume.pdf" target="_blank">Download Resume</a>
-      </header>
-      <section>
+      <br />
+
+      <a class="downloads" href="/assets/files/Ryan Bowering Resume.pdf" target="_blank">Download Resume</a>
+    </header>
+    <section>
 
       {{ content }}
 
-      </section>
+    </section>
 
-    </div>
-    <script src="{{ "/assets/js/scale.fix.js" | relative_url }}"></script>
-  </body>
+  </div>
+  <script src="{{ " /assets/js/scale.fix.js" | relative_url }}"></script>
+</body>
+
 </html>
