Revert "Merge branch 'main' of https://github.com/bowerirn/bowerirn.github.io"
This reverts commit 3daaea4beb989840ce157f8c76aa26d09688b6b6, reversing
changes made to 37a89918b28d110982937d33e81aca55a064fdfd.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
         <img src="{{site.logo | relative_url}}" alt="Logo" class="profile-image"/>
 
         <h2>Ryan Bowering</h2>
-        <p>CS/AI PhD @ University of Rochester</p>
+        <p>Post-Bac @ LANL</p>
 
         <br/>
 
